Add user delete route
